sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: '(' expected but '{' found.
    {
    ^AlgBubbleSort1:14: error: illegal start of simple expression
}
^